--- a/pages/1_Lesson.html
+++ b/pages/1_Lesson.html
@@ -283,7 +283,7 @@ Go to your folder you created for this project, you shoud see something like thi
 <h3 id="sec-1-7">Badge It</h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
-<li>Take the quiz by clicking <a href="../quiz/popquiz.htm">THIS</a> link.
+<li>Take the quiz by clicking <a href="https://docs.google.com/a/stcatherines.gr/forms/d/e/1FAIpQLSfbwt9e7tJbzCewXNQmCZ31ePnDnwqFH0NqJMTL5Buhty6ccg/viewform">THIS</a> link.
 </li>
 <li><b>Silver:</b> Score 50%
 </li>
